2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't export grub_gate_a20.

	* grub-core/kern/i386/pc/init.c: Remove leftovers.
	* grub-core/kern/i386/pc/startup.S (FUNCTION(grub_gate_a20)): Rename
	to ...
	(grub_gate_a20): ... this. All users updated.
	* include/grub/i386/pc/init.h: Removed. All users updated.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Create euro.pf2 which supports most European languages.

	* Makefile.am (grubdata_DATA): Add euro.pf2.
	(euro.pf2): New target.
	(CLEANFILES): Add euro.pf2.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Disable emu-usb by default to prevent inadvertent
	device takeover.

2010-09-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Disable usbserial on grub-emu since our libusb code isn't good enough
	yet.

	* grub-core/Makefile.core.def (usbserial_common): Disable on emu.
	(usbserial_pl2303): Likewise.
	(usbserial_ftdi): Likewise.

2010-09-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/disk.h (grub_disk): Remove has_partitions.
	All users updated.
	* disk/loopback.c (grub_loopback): Remove has_partitions.
	All users updated.
	(options): Remove partitions. All users updated.
	* util/grub-fstest.c (fstest): Don't pass "-p" to loopback.
	* util/i386/pc/grub-setup.c (setup): copy partition table only when
	actual partition table is found.

2010-09-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove readability checks (too many false negatives).

	* util/grub-install.in: Remove readability checks.
	* util/grub-mkconfig.in: Likewise.
	* util/grub.d/10_hurd.in: Likewise.
	* util/grub.d/10_kfreebsd.in: Likewise.
	* util/grub.d/10_linux.in: Likewise.
	* util/grub-mkconfig_lib.in (is_path_readable_by_grub): Revert to old
	way.

2010-09-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Enable acpi shutdown on all ACPI platforms.

	* grub-core/Makefile.core.def (halt): Inlude commands/acpihalt.c
	on coreboo, multiboot and EFI.